# onyx-hardware

./: .env.example  .env.prod.example  .gitignore  ARCHITECTURE_DIAGRAM.md  BUILD_SUMMARY.md  COMPLETION_SUMMARY.md  COMPONENT_INVENTORY.md  DEPLOYMENT.md  DOCUMENTATION.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  INDEX.md  LOCAL_DEVELOPMENT.md  LiveAnalysisDashboard.jsx  MANIFEST.md  Makefile  PROJECT_ONYX_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README_FIRST.md  STATUS.md  SYSTEM_READY.md  TESTING_READY.md  clock_sync.py  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  schema.sql  useSessionWebSocket.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  mock_server.py  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_onyx_schema.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/models/: __init__.py  base.py  device.py  events.py  session.py  user.py
backend/app/routers/: __init__.py  analytics.py  auth.py  clock_sync.py  health.py  sessions.py  shots.py  stream.py  ws_shots.py
backend/app/services/: __init__.py  clock.py  flash_detector.py  fusion.py  influx_service.py  redis_service.py  shot_service.py
backend/app/workers/: cv_worker.py
backend/tests/: conftest.py  test_shots.py  test_stream.py
firmware/: README.md
fix/: docker-compose.yml
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  (+10 more)
(+38 files in other folders)
